Fix dropdown z-index

--- a/src/js/components/Base/DropDownMenu.sass
+++ b/src/js/components/Base/DropDownMenu.sass
@@ -5,7 +5,6 @@
   padding-bottom: 2px
 
 .dropDownMenu
-  z-index: 10
   border: 1px solid
   border-radius: 3px
   cursor: pointer
@@ -45,7 +44,7 @@
         > span  // .Select-arrow
 
     > div:nth-of-type(2)  // .Select-menu-outer
-      z-index: 100
+      z-index: 10
 // .dropDownMenu
 //
 //
